test/visibility/import/noUnscoreRename.good
noUnscoreRename.chpl:5: syntax error: near '_'
